@@ -1168,6 +1168,11 @@ WIDGET_DEFAULT = {
         "bkg_color_laptime": "#2A2A2A",
         "font_color_player_laptime": "#000000",
         "bkg_color_player_laptime": "#BBBBBB",
+        "show_best_laptime": False,
+        "font_color_best_laptime": "#AAAAAA",
+        "bkg_color_best_laptime": "#2A2A2A",
+        "font_color_player_best_laptime": "#000000",
+        "bkg_color_player_best_laptime": "#BBBBBB",
         "show_position_in_class": True,
         "font_color_position_in_class": "#CCCCCC",
         "bkg_color_position_in_class": "#444444",
@@ -1199,6 +1204,7 @@ WIDGET_DEFAULT = {
         "column_index_driver": 2,
         "column_index_vehicle": 6,
         "column_index_laptime": 3,
+        "column_index_best_laptime": 11,
         "column_index_position_in_class": 4,
         "column_index_class": 5,
         "column_index_tyre_compound": 7,
